<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:orientation="vertical"
  >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textAlignment="center" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="10dp"
        >
        <LinearLayout
            android:background="@color/_F8F5F5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/flag_challenge"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:fontFamily="sans-serif-black"
                android:layout_marginBottom="10dp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/_D9D9D9"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp"
                >
                <TextView
                    android:id="@+id/header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/schedule"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginBottom="10dp"
                    />
         <TimePicker
             android:background="@color/_D9D9D9"
                    android:id="@+id/timePicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_gravity="center"
                    android:timePickerMode="spinner"
                    android:layout_marginBottom="16dp"
                    android:visibility="visible"
            />

                <TextView
                    android:id="@+id/countdownTimer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/will_start_in_00_20"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:visibility="visible"
                    android:fontFamily="sans-serif-black"
                    android:padding="8dp"
                    />
                <TextView
                    android:id="@+id/countdownMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_00_10"
                    android:textSize="18sp"
                    android:padding="8dp"
                    android:gravity="center"
                    android:textColor="@android:color/darker_gray"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif"
                    android:layout_marginStart="16dp"
                    android:visibility="visible"/>


            </LinearLayout>


            <Button
                android:layout_gravity="center"
                android:id="@+id/btnStart"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:visibility="visible"
                />
        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

</LinearLayout>