<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ResultActivity"
    android:gravity="center"
    android:paddingHorizontal="30dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gameOver"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_trophy"
            />



    <TextView
        android:id="@+id/congratulationsTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/Congratulations"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/scoreTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Your score is 5 out of 10"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:paddingVertical="16dp"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        app:cardCornerRadius="5dp"
        app:cardUseCompatPadding="true">

    <Button
        android:id="@+id/btnRestart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/try_again"
        android:textAllCaps="true"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/white"
        android:textSize="18sp"
        />
    </androidx.cardview.widget.CardView>

</LinearLayout>