<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".ui.QuestionsActivity">


    <TextView
        android:layout_marginTop="25dp"
        android:id="@+id/headerflag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/flag_challenge"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:fontFamily="sans-serif-black"
        />
    <TextView

        android:id="@+id/timerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="00:30"
        android:textSize="14sp"
        android:layout_below="@+id/headerflag"
        android:textColor="#FFFFFF"
        android:background="@drawable/timer_background"
        android:padding="8dp"
        android:layout_alignParentStart="true"
        />
    <LinearLayout
        android:id="@+id/ltProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timerText"
        android:gravity="center_vertical"
        >
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:min="0"
            android:max="10"
            android:minHeight="50dp"
            android:progress="1"
            android:indeterminate="false"
            android:layout_marginEnd="2dp"
            android:progressTint="@color/black"
            android:progressBackgroundTint="@color/purple_200"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/tvProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="1/15"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/questionNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Question 2"
        android:textSize="14sp"
        android:background="@drawable/question_number_background"
        android:padding="8dp"
        android:textColor="@color/white"
        android:layout_below="@+id/ltProgressBar"
        android:layout_alignParentStart="true"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/questionNumber"
        android:orientation="vertical"
      >
    <TextView
        android:layout_below="@+id/questionNumber"
        android:id="@+id/tvQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guess_the_country_by_the_flag"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:gravity="center"
        android:fontFamily="sans-serif-black"
        android:textColor="@android:color/black"
        android:layout_marginTop="16dp"/>

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_below="@+id/tvQuestion"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:src="@drawable/new_zealand__nz"/>


    <LinearLayout
        android:id="@+id/ltOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivImage"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="2dp">
        <LinearLayout
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivImage"
            android:orientation="horizontal"
            android:layout_margin="8dp">

            <LinearLayout
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp">
                <TextView
                    android:id="@+id/optionOne"
                    style="@style/toggleButton"
                    tools:text="@string/CountryName"
                    android:layout_margin="2dp" />
                <TextView
                    android:id="@+id/optionOneResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_green_dark"
                    android:text="@string/correct"
                    android:layout_gravity="center"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp">
                <TextView
                    android:id="@+id/optionTwo"
                    style="@style/toggleButton"
                    tools:text="@string/CountryName"
                    android:layout_margin="2dp" />
                <TextView
                    android:id="@+id/optionTwoResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_green_dark"
                    android:text="@string/correct"
                    android:visibility="gone"
                    android:layout_gravity="center"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivImage"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp">
                <TextView
                    android:id="@+id/optionThree"
                    style="@style/toggleButton"
                    android:text="@string/CountryName"
                    android:layout_margin="2dp" />
                <TextView
                    android:id="@+id/optionThreeResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_green_dark"
                    android:layout_gravity="center"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp">
                <TextView
                    android:id="@+id/optionFour"
                    style="@style/toggleButton"
                    android:layout_margin="2dp"
                    android:text="@string/CountryName"
                    />
                <TextView
                    android:id="@+id/optionFourResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_green_dark"
                    android:visibility="gone"
                    android:layout_gravity="center"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/submit"
        android:layout_below="@+id/ltOptions"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:paddingVertical="10dp" />
    </LinearLayout>
</RelativeLayout>
